# landsatbench

./: .gitignore  README.md  pyproject.toml
data/: download_bigearthnet-pc.py  download_bigearthnet-usgs-api.py  download_eurosat.py  download_lc100-usgs-api.py  eurosat.parquet  extract_bigearthnet.ipynb  extract_eurosat.ipynb  extract_fmow.ipynb  extract_lc100_s3.ipynb  lc100_s3.parquet
eval/: bigearthnet-eval.ipynb  compute_bigearthnet_stats.py  compute_eurosat_stats.py  compute_lc100_stats.py  dofa-eval.ipynb  embed_bigearthnet.py  embed_lc100.py  eurosat-eval.ipynb  image-stats-baseline.ipynb  lc100-eval.ipynb  prithvi-eval.ipynb  satlas-eval.ipynb
landsatbench/: __init__.py  datamodule.py  embed.py  eval.py  utils.py
landsatbench/datasets/: __init__.py  bigearthnet.py  eurosat.py  lc100.py
